change docker container type in a Jenkinsfile

--- a/domainless/hello-world/ci-cd/Jenkinsfile
+++ b/domainless/hello-world/ci-cd/Jenkinsfile
@@ -2,10 +2,10 @@ def GIR_REPO_URL = 'https://github.com/oprokipchuk/backend-sandbox'
 
 pipeline {
     agent {
-        dockerContainer(image: 'maven:3.9.4')
-        //docker {
-        //    image 'maven:3.9.4'
-        //}
+        //dockerContainer(image: 'maven:3.9.4')
+        docker {
+            image 'maven:3.9.4'
+        }
     }
 
     stages {
