Jenkinsfile: change root dir for mvn command

--- a/domainless/hello-world/ci-cd/Jenkinsfile
+++ b/domainless/hello-world/ci-cd/Jenkinsfile
@@ -16,7 +16,9 @@ pipeline {
         }
         stage('Build') {
             steps {
-                sh 'mvn clean install'
+                dir('domainless/hello-world') {
+                    sh 'mvn clean install'
+                }
             }
         }
     }
