Jenkinsfile: do not print transfer progress in maven build

--- a/domainless/hello-world/ci-cd/Jenkinsfile
+++ b/domainless/hello-world/ci-cd/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
         stage('Build') {
             steps {
                 dir('domainless/hello-world') {
-                    sh 'mvn clean install'
+                    sh 'mvn --no-transfer-progress clean install'
                 }
             }
         }
