fix docker ci stage

--- a/domainless/hello-world/ci-cd/Jenkinsfile
+++ b/domainless/hello-world/ci-cd/Jenkinsfile
@@ -17,19 +17,19 @@ pipeline {
         }
         stage('Docker Image: Build & Push') {
            steps {
-               withCredentials([usernamePassword(credentialsId: 'docker', usernameVariable: 'DOCKER_USERNAME', passwordVariable: 'DOCKER_PASSWORD')]) {
+               withCredentials([usernamePassword(credentialsId: 'docker', usernameVariable: 'DOCKER_USERNAME', passwordVariable: 'DOCKER_ACCESS_TOKEN')]) {
                    script {
                        def APP_NAME = 'hello-world'
                        def IMAGE_TAG = new Date().format("yyyy-MM-dd-HHmmss")
 
-                       def IMAGE_FULL_NAME = "${DOCKER_HUB_USERNAME}/${APP_NAME}:${IMAGE_TAG}"
+                       def IMAGE_FULL_NAME = "${DOCKER_USERNAME}/${APP_NAME}:${IMAGE_TAG}"
                        echo "Image Full Name is: ${IMAGE_FULL_NAME}"
 
                        def DOCKERFILE_PATH = 'ci-cd/Dockerfile'
 
                        sh "docker build -t ${IMAGE_FULL_NAME} -f ${DOCKERFILE_PATH} ."
 
-                       sh "echo -n '${DOCKER_HUB_TOKEN}' | docker login -u ${DOCKER_HUB_USERNAME} --password-stdin"
+                       sh "echo -n '${DOCKER_ACCESS_TOKEN}' | docker login -u ${DOCKER_USERNAME} --password-stdin"
 
                        sh "docker push ${IMAGE_FULL_NAME}"
                    }
