--- a/domainless/hello-world/ci-cd/Dockerfile
+++ b/domainless/hello-world/ci-cd/Dockerfile
@@ -1,4 +1,4 @@
 FROM eclipse-temurin:17.0.8.1_1-jre-alpine
-ARG JAR_FILE=target/*.jar
+ARG JAR_FILE=../target/*.jar
 COPY ${JAR_FILE} app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
