--- a/domainless/hello-world/ci-cd/Jenkinsfile
+++ b/domainless/hello-world/ci-cd/Jenkinsfile
@@ -46,14 +46,16 @@ pipeline {
             }
             steps {
                 withAWS(role: env.AWS_JENKINS_ROLE, roleAccount: env.AWS_ACCOUNT, region: env.AWS_REGION, duration: 600, roleSessionName: 'jenkins-session') {
-                    def EKS_CLUSTER_NAME = env.EKS_CLUSTER_NAME
-                    def K8S_FILE_PATH = "${PROJECT_PATH}/ci-cd/k8s.yml"
+                    script {
+                        def EKS_CLUSTER_NAME = env.EKS_CLUSTER_NAME
+                        def K8S_FILE_PATH = "${PROJECT_PATH}/ci-cd/k8s.yml"
 
-                    sh "aws eks update-kubeconfig --name ${EKS_CLUSTER_NAME}"
-                    sh """
-                        sed -i "s|image_id|${IMAGE_FULL_NAME}|" ${K8S_FILE_PATH}
-                        kubectl apply -f ${K8S_FILE_PATH}
-                    """
+                        sh "aws eks update-kubeconfig --name ${EKS_CLUSTER_NAME}"
+                        sh """
+                            sed -i "s|image_id|${IMAGE_FULL_NAME}|" ${K8S_FILE_PATH}
+                            kubectl apply -f ${K8S_FILE_PATH}
+                        """
+                    }
                 }
             }
         }
