--- a/domainless/hello-world/ci-cd/Jenkinsfile
+++ b/domainless/hello-world/ci-cd/Jenkinsfile
@@ -41,20 +41,19 @@ pipeline {
         stage('Kubernetes: Deploy') {
             agent {
                 docker {
-                    image 'odaniait/aws-kubectl'
+                    image 'oprokipchuk/backend-sandbox-cicd'
+                    args '-u root'
                 }
             }
             steps {
-                withAWS(role: env.AWS_JENKINS_ROLE, roleAccount: env.AWS_ACCOUNT, region: env.AWS_REGION, roleSessionName: 'jenkins-session') {
-                    script {
-                        def K8S_FILE_PATH = "${PROJECT_PATH}/ci-cd/k8s.yml"
+                script {
+                    def K8S_FILE_PATH = "${PROJECT_PATH}/ci-cd/k8s.yml"
 
-                        sh "aws eks update-kubeconfig --name ${env.EKS_CLUSTER_NAME}"
-                        sh """
-                            sed -i "s|image_id|${env.IMAGE_FULL_NAME}|" ${K8S_FILE_PATH}
-                            kubectl apply -f ${K8S_FILE_PATH}
-                        """
-                    }
+                    sh "aws eks update-kubeconfig --name ${env.EKS_CLUSTER_NAME} --region ${env.AWS_REGION}"
+                    sh """
+                        sed -i "s|image_id|${env.IMAGE_FULL_NAME}|" ${K8S_FILE_PATH}
+                        kubectl apply -f ${K8S_FILE_PATH}
+                    """
                 }
             }
         }
