add email notification test build step

--- a/domainless/hello-world/ci-cd/Jenkinsfile
+++ b/domainless/hello-world/ci-cd/Jenkinsfile
@@ -47,6 +47,7 @@ pipeline {
                 docker {
                     image 'oprokipchuk/backend-sandbox-cicd'
                     args '-u root'
+                    alwaysPull true
                 }
             }
             steps {
