--- a/domainless/hello-world/ci-cd/k8s.yml
+++ b/domainless/hello-world/ci-cd/k8s.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: hello-world
-          image: image_id
+          image: oprokipchuk/hello-world:latest
           ports:
             - containerPort: 80
           env:
