--- a/domainless/hello-world/ci-cd/Jenkinsfile
+++ b/domainless/hello-world/ci-cd/Jenkinsfile
@@ -25,8 +25,8 @@ pipeline {
                         def IMAGE_TAG = new Date().format("yyyy-MM-dd-HHmmss")
 
                         def IMAGE_NAME = "${DOCKER_USERNAME}/${APP_NAME}"
-                        def IMAGE_LATEST_NAME = "${IMAGE_NAME}:latest"
 
+                        env.IMAGE_LATEST_NAME = "${IMAGE_NAME}:latest"
                         env.IMAGE_FULL_NAME = "${IMAGE_NAME}:${IMAGE_TAG}"
                         echo "Image Full Name is: ${env.IMAGE_FULL_NAME}"
 
@@ -36,7 +36,7 @@ pipeline {
 
                         sh """
                             docker buildx inspect --bootstrap
-                            docker buildx build --platform linux/amd64,linux/arm64 --push -t ${env.IMAGE_FULL_NAME} -t ${IMAGE_LATEST_NAME} -f ${DOCKERFILE_PATH} ${PROJECT_PATH}
+                            docker buildx build --platform linux/amd64,linux/arm64 --push -t ${env.IMAGE_FULL_NAME} -t ${env.IMAGE_LATEST_NAME} -f ${DOCKERFILE_PATH} ${PROJECT_PATH}
                         """
                     }
                 }
@@ -56,7 +56,7 @@ pipeline {
 
                     sh "aws eks update-kubeconfig --name ${env.EKS_CLUSTER_NAME} --region ${env.AWS_REGION}"
                     sh """
-                        sed -i "s|image_id|${env.IMAGE_FULL_NAME}|" ${K8S_FILE_PATH}
+                        sed -i "s|${env.IMAGE_LATEST_NAME}|${env.IMAGE_FULL_NAME}|" ${K8S_FILE_PATH}
                         kubectl apply -f ${K8S_FILE_PATH}
                     """
                 }
