add db and 3rd party providers usage, add tests, adjust infrastructure

--- a/domainless/hello-world/src/main/resources/application.properties
+++ b/domainless/hello-world/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+# Data Source
+spring.datasource.url=jdbc:mariadb://${spring.datasource.hostname}:3306/hello_world_db?createDatabaseIfNotExist=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
+spring.jpa.database=MYSQL
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=none
+
+jokes.random.url=https://official-joke-api.appspot.com/random_joke
