--- a/domainless/hello-world/ci-cd/Jenkinsfile
+++ b/domainless/hello-world/ci-cd/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
             agent {
                 docker {
                     image 'maven:3.9.4-eclipse-temurin-17-alpine'
-                    args '-u root'
+                    args '-u root -v /var/run/docker.sock:/var/run/docker.sock'
                 }
             }
             steps {
